<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.recomanded.RecommendedFragment">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        app:title="@string/our_suggestion"
        android:layout_height="?attr/actionBarSize" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        app:checkedChip="@id/chip1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_home" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_dashboard" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_notifications" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip4"
            style="@style/CustomChip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />

    </com.google.android.material.chip.ChipGroup>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="?attr/actionBarSize" />
</LinearLayout>