<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.amorphteam.stylistet.launcher.customize.CustomizeDataViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".launcher.customize.CustomizeDataFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customize_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2dp"
                android:gravity="center"
                android:padding="@dimen/_2dp"
                android:text="@string/customize_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/customize_title_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2dp"
                android:gravity="center"
                android:padding="@dimen/_4dp"
                android:text="@string/customize_title_two"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </LinearLayout>


        <RelativeLayout
            android:id="@+id/rl_trickle_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10dp"
            android:layout_marginTop="@dimen/_25dp"
            android:layout_marginEnd="@dimen/_10dp"
            android:layoutDirection="rtl"
            android:mirrorForRtl="true">

            <TextView
                android:id="@+id/budge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:text="@string/customize_Budget"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/trickle_rate_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/budge"
                android:layout_marginStart="@dimen/_12dp"
                android:layout_marginBottom="@dimen/_10dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sp"
                android:textStyle="bold" />


            <com.google.android.material.slider.RangeSlider
                android:id="@+id/range_slider_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/trickle_rate_value"
                android:contentDescription="@string/budget2"
                android:stepSize="10.0"
                android:valueFrom="0.0"
                android:valueTo="30.0"
                app:values="@array/initial_slider_values" />
            
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/customize_favorite_color_spectrum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2dp"
                android:padding="@dimen/_8dp"
                android:text="@string/customize_favorite_color_spectrum"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                />

        </LinearLayout>


        <Button
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:gravity="center"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="@color/black"

            />
    </LinearLayout>
</layout>