<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".launcher.collection.CollectionFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/collection_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2dp"
                android:gravity="center"
                android:padding="@dimen/_2dp"
                android:text="@string/collection_title"
                android:textColor="@color/black"
                android:textSize="@dimen/_18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/collection_title_two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_2dp"
                android:gravity="center"
                android:padding="@dimen/_4dp"
                android:text="@string/collection_title_two"
                android:textColor="@color/black"
                android:textSize="@dimen/_12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>

        <Button
            android:id="@+id/next"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|left"
            android:gravity="center"
            android:text="@string/next"
            android:textAlignment="center"
            android:textColor="@color/black"
            />

    </LinearLayout>
</layout>